--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script/rps.js"></script>
 </head>
 <body>
-    
+    <script>
 
-    
+       game();
+
+
+    </script>
+
+
 </body>
 </html>
