--- a/pagescript.html
+++ b/pagescript.html
@@ -7,7 +7,9 @@
     <script src="script/rps.js"></script>
 </head>
 <body>
-    <a href="pagescript.html">Script testing page </a>
-
+    <script>
+        game();
+    </script>
+    
 </body>
 </html>
