Created a basic gui for testing the script changes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Document</title>
     <script src="script/rps.js"></script>
 </head>
 <body>
+
     <a href="pagescript.html">Script testing page </a>
+    <div class="container">
+        <div class="row">
+            <h1 class="main-title">The Rock, Paper Scissors game!</h1>
+        </div>
+        <div class="row">
+            <div class="button-container">
+                <button class="icon icon-rock"></button>
+            </div>
+            <div class="button-container">
+                <button class="icon icon-rock"></button>
+            </div>
+            <div class="button-container">
+                <button class="icon icon-rock"></button>
+            </div>
+        </div>
+
+        <div class="row" >
+            <div class="scorekeeper">
+                <p>Score</p>
+                <p>Player:   </p>
+                <p>Computer:  </p>
+            </div>
+        </div>
+        
+
+
+    </div>
 
 </body>
 </html>
