Preliminary testing for the new script; testing variable permanency

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Document</title>
     <script src="script/rps.js"></script>
+    <script src="script/rpsScript.js"></script>
 </head>
 <body>
 
@@ -16,13 +17,13 @@
         </div>
         <div class="row">
             <div class="button-container">
-                <button class="icon icon-rock"></button>
+                <button class="icon icon-rock" onclick="buttonClick()"></button>
             </div>
             <div class="button-container">
-                <button class="icon icon-rock"></button>
+                <button class="icon icon-paper"></button>
             </div>
             <div class="button-container">
-                <button class="icon icon-rock"></button>
+                <button class="icon icon-scissors"></button>
             </div>
         </div>
 
