--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 
-    <a href="pagescript.html">Script testing page </a>
     <div class="container">
         <div class="row">
             <h1 class="main-title">The Rock, Paper Scissors game!</h1>
@@ -30,8 +29,8 @@
         <div class="row" >
             <div class="scorekeeper">
                 <p>Score</p>
-                <p>Player:   </p>
-                <p>Computer:  </p>
+                <p id="playerScore">Player score:   0</p>
+                <p id="computerScore">Computer score:  0</p>
             </div>
             <div class="button-container">
                 <button class="icon" onclick="reset()">Reset</button>
