Implemented score keeping for round, implemtend alter for match result

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <div class="container">
-        <div class="row">
-            <h1 class="main-title">The Rock, Paper Scissors game!</h1>
+        <div class="row centerRow">
+            <h1 class="title title-main">The Rock, Paper Scissors game!</h1>
         </div>
         <div class="row">
             <div class="button-container">
@@ -24,6 +24,9 @@
             <div class="button-container">
                 <button class="icon icon-scissors" onclick="round(2)"></button>
             </div>
+        </div>
+        <div class="row centerRow">
+            <h1 id="roundResult" class="title"></h1>
         </div>
 
         <div class="row" >
