Styling for the page, verified the script

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <title>Document</title>
+    <title>RPS</title>
     <script src="script/rps.js"></script>
     <script src="script/rpsScript.js"></script>
 </head>
@@ -26,17 +26,14 @@
             </div>
         </div>
         <div class="row centerRow">
-            <h1 id="roundResult" class="title"></h1>
+            <h2 id="roundResult" class="subtitle"></h2>
         </div>
 
         <div class="row" >
             <div class="scorekeeper">
-                <p>Score</p>
+                <h2 class="subtitle">Score</h2>
                 <p id="playerScore">Player score:   0</p>
                 <p id="computerScore">Computer score:  0</p>
-            </div>
-            <div class="button-container">
-                <button class="icon" onclick="reset()">Reset</button>
             </div>
             
         </div>
