Gui for result completed, event listners for button completed, missing ui/ux improvements

--- a/visualResults.html
+++ b/visualResults.html
@@ -17,19 +17,19 @@
         </div>
         <div class="box" id="playerSelect">
             <div class="button-container">
-                <button class="icon icon-rock" onclick="round(0)"></button>
+                <button class="icon icon-rock" id="rock"></button>
             </div>
             <div class="button-container">
-                <button class="icon icon-paper" onclick="round(1)"></button>
+                <button class="icon icon-paper" id="paper"></button>
             </div>
             <div class="button-container">
-                <button class="icon icon-scissors" onclick="round(2)"></button>
+                <button class="icon icon-scissors" id="scissors"></button>
             </div>
         </div>
-        <div class="box" id="gameResult">
+        <div class="box" id="gameResult" >
             <div class="box centerbox boxNoWrap">
-                <div class="box centerbox"><img src="/img/Paper.png" width="50%"></div>
-                <div class="box centerbox"><img src="/img/Paper.png" width="50%"></div>
+                <div class="box centerbox"><img src="" width="50%" id="playerImage"></div>
+                <div class="box centerbox"><img src="" width="50%" id="computerImage"></div>
             </div>
             <div class="box"><h2 id="roundResult" class="subtitle"></h2></div>
             <div class="box centerbox">
