Fixes for github push, and removed old link to previous code@

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>RPS</title>
     <script src="script/rpsScript.js"></script>
 </head>
@@ -12,7 +12,6 @@
     <div class="container">
         <div class="box" >
             <h1 class="title title-main">The Rock, Paper Scissors game!</h1>
-            <h2 class="subtitle"><a href="/index.html">Script 1.0</a></h2>
         </div>
         <div class="box" id="playerSelect">
             <div class="button-container">
